app/page.module.css
.main {
  display: flex;
  flex-direction: column;
}

.landing_box {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
}

.explanation_box{
  margin-top: 25px;
  margin-bottom: 160px;
  margin-left: 110px;
  margin-right: 110px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.explanation_box_mobile{
  margin-top: 60px;
  margin-bottom: 90px;
  margin-left: 32px;
  margin-right: 32px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.explanation_item {
  margin-top: 40px;
  margin-bottom: 40px;
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.explanation_item_mobile {
  margin-top: 30px;
  margin-bottom: 30px;
  display: flex;
  flex-direction: column;
  width: 100%;
}

.explanation_title {
  width: 230px;
}

.explanation_body {
  width: 50vw;
}

.body_with_bars p {
  display: inline-block;
  margin-top: 20px;
  margin-bottom: 20px;
}

.withus_title {
  width: 180px;
  margin-right: 20px;
}

.bar {
  width: 100%;
  height: 1px;
  background: #272727;
}

.logo {
  margin-top: 40px;
  height: 30vh;
  min-height: 200px;
  max-width: 100vw;
  object-fit: contain;
}

.logo_mobile {
  padding: 36px;
  width: 100%;
  object-fit: contain;
}

.small_logo {
  margin-top: 40px;
  margin-bottom: 40px;
  height: 48px;
  object-fit: contain;
}

.small_logo_mobile {
  margin-top: 30px;
  margin-bottom: 30px;
  height: 36px;
  object-fit: contain;
}

